--- a/templates/form_action.html
+++ b/templates/form_action.html
@@ -4,15 +4,55 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
   <meta charset="UTF-8">
+  <meta name="Generator" content="EditPlus®">
+  <meta name="Author" content="">
+  <meta name="Keywords" content="">
+  <meta name="Description" content="">
+  <title>Document</title>
+  <meta charset="UTF-8">
   <title>Document</title>
  </head>
+
  <body>
-	<h4>반갑습니다.</h4>
-	<strong>User infomation</strong><br>
-  Fistname : {{ firstname }}<br>
+  <div class="container">
+
+      <div class="row">
+        <div class="col-2">
+        </div>
+        <div class="col-10">
+            <br \>
+            <br \>
+            <br \>
+            <h3 class="display-4">분석 내용</h3>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">First</th>
+
+                </tr>
+              </thead>
+
+                {% for key, value in result.items() %}
+                  <tr>
+                      <th scope="row"> {{ key }} </th>
+                      <td> {{ value }} </td>
+                  </tr>
+                {% endfor %}
+            </table>
 
 
 	<br><br>
-  <button type="button" onclick="location.href='/'">돌아가기</button>
- </body>
+  <button type="button" onclick="location.href='/'" class="btn btn-secondary">돌아가기</button>
+        </div>
+        <div class="col-2">
+        </div>
+      </div>
+    </div>
+
+
+
+</body>
+
+
 </html>
